Ajout d'un Menu à la page index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
    <marquee behavior="" direction=""><h1>Under construction</h1></marquee> 
+
+
+<h2>Menu du site web </h2>
+
+   <h3>Lien 1</h3>
+   <h3>Lien 2</h3>
+   <h3>lien 3</h3>
+
+
 </body>
 </html>
