--- a/p1.html
+++ b/p1.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-   <marquee behavior="" direction=""><h1>Under construction</h1></marquee> 
+   <marquee behavior="" direction=""><h1>page 1</h1></marquee> 
 
 
 <h2>Menu du site web </h2>
 
-   <a href="p1.html"><h3>Lien 1</h3></a>
+   <h3>Lien 1</h3>
    <h3>Lien 2</h3>
    <h3>lien 3</h3>
 
